<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_chat"
        android:icon="@drawable/ic_options"
        android:orderInCategory="100"
        android:title="@string/str_settings"
        app:showAsAction="always">

        <menu>

            <item
                android:id="@+id/menu_media"
                android:orderInCategory="100"
                android:title="@string/str_media" />

            <item
                android:id="@+id/menu_clear_chat"
                android:orderInCategory="100"
                android:title="@string/str_clear_chat" />

            <item
                android:id="@+id/menu_wallpaper"
                android:orderInCategory="100"
                android:title="@string/str_wallpaper"
                android:visible="false" />

            <item
                android:id="@+id/menu_secret"
                android:orderInCategory="100"
                android:title="@string/str_secret_chat"
                android:visible="false" />

            <item
                android:id="@+id/menu_block"
                android:orderInCategory="100"
                android:title="@string/str_block" />

        </menu>

    </item>

</menu>