<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.forward.view.ForwardActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/layout_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_background"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:background="@drawable/bottom_background"
            app:layout_scrollFlags="scroll|enterAlways|snap">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_forward_to"
                android:textColor="@color/greyish_brown"
                android:textSize="@dimen/_16sdp"
                app:fontFamily="@font/roboto_regular" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textview_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/_10sdp"
                android:text="@string/str_next"
                android:textColor="@color/greyish_brown"
                android:textSize="@dimen/_16sdp"
                android:visibility="gone"
                app:fontFamily="@font/roboto_regular" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edittext_search_forward"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:background="@drawable/background_curvy"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="10dp"
        android:hint="@string/search_hint"
        android:paddingStart="@dimen/_17sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:singleLine="true"
        android:textColor="@color/msg_time"
        android:textColorHint="@color/msg_time"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintTop_toBottomOf="@+id/layout_app_bar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_message_forward"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_search_forward" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_no_contacts"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/no_users_found"
        android:textSize="@dimen/_14sdp"
        android:visibility="gone"
        app:fontFamily="@font/roboto_regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_search_forward" />

</androidx.constraintlayout.widget.ConstraintLayout>