<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.creategroup.view.CreateGroupActivity">

    <RelativeLayout
        android:id="@+id/layout_app_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/bottom_background"
        android:padding="@dimen/_5sdp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageview_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/ic_back_arrow" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_toStartOf="@+id/textview_next"
            android:layout_toEndOf="@+id/imageview_back"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/str_new_group"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/textview_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:background="@null"
            android:fontFamily="@font/roboto_regular"
            android:padding="10dp"
            android:text="@string/str_next"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageview_group_icon"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_90sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:scaleType="centerCrop"
        android:src="@drawable/default_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_app_bar" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edittext_group_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/str_hint_enter_group_name"
        android:inputType="textCapWords"
        android:maxLength="25"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageview_group_icon" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@color/white_three"
        app:layout_constraintTop_toBottomOf="@+id/edittext_group_subject" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textview_participant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:padding="@dimen/_13sdp"
        android:text="@string/str_participants"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_create_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:divider="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_participant" />

</androidx.constraintlayout.widget.ConstraintLayout>