<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.addparticipants.view.AddParticipantsActivity">


    <RelativeLayout
        android:id="@+id/layout_app_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/bottom_background"
        android:padding="@dimen/_5sdp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageview_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/ic_back_arrow" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textview_create_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_toStartOf="@+id/textview_next"
            android:layout_toEndOf="@+id/imageview_back"
            android:text="@string/str_create_chat_group"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sdp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/textview_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:background="@null"
            android:fontFamily="@font/roboto_regular"
            android:padding="10dp"
            android:text="@string/str_next"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edittext_search_member"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/background_curvy"
        android:drawableStart="@drawable/ic_search_grey"
        android:drawablePadding="10dp"
        android:hint="@string/search_hint"
        android:paddingStart="@dimen/_17sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:singleLine="true"
        android:textColor="@color/msg_time"
        android:textColorHint="@color/msg_time"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintTop_toBottomOf="@+id/layout_app_bar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_selected_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:divider="@null"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edittext_search_member" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_contacts"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="none"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/progress_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_selected_contact" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_contacts" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textview_no_contacts"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/no_contacts"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sdp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_search_member" />

</androidx.constraintlayout.widget.ConstraintLayout>